# kanon

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  coverage.json  pyproject.toml  requirements-dev.txt
.ai-sdlc/metrics/: claude-code-metrics.jsonl
.devcontainer/: .devcontainer.postcreate.sh  fix-line-endings.py
.github/workflows/: main-validation.yml  pr-validation.yml  publish.yml
docs/: architecture.md  catalog-author-guide.md  catalog-format-versioning.md  catalogs-explained.md  claude-marketplaces-guide.md  cli-reference.md  cli.md  coming-from-pip-npm-cargo.md  configuration.md  contributing.md  creating-manifest-repos.md  creating-packages.md  doctor.md  exit-codes.md  git-auth-setup.md  how-it-works.md  installation.md  integration-testing.md  lifecycle.md  list-and-add.md  lockfile.md  migrating-existing-kanon-files.md  migration-bootstrap-to-add.md  migration-to-add.md  multi-source-guide.md  outdated-and-why.md  pipeline-integration.md  privacy.md  security-model.md  setup-guide.md  shell-completion.md  test-coverage.md  troubleshooting.md  url-canonicalization.md  version-resolution.md
docs/cli/: catalog-audit.md  doctor.md  validate.md
docs/testing/: matrix-traceability.md
scripts/: check_archive_no_duplicates.py
src/kanon_cli/: __init__.py  cli.py  constants.py  version.py
src/rpm_cli/: __init__.py  constants.py  version.py
tests/: conftest.py  test_wheel_layout.py
tests/functional/: conftest.py  test_add_alias_journey.py  test_alias_consumer_journey.py  test_argparse_errors.py  test_argparse_help.py  test_bootstrap_catalog_source.py  test_bootstrap_errors.py  test_bootstrap_list_and_default_target.py  test_bootstrap_output_dir.py  test_ci_runs_operator_path_tests.py  test_clean_lifecycle.py  test_cli_entry_point.py  test_completion_snapshots.py  test_default_branch_journey.py  test_env_int_guard_journey.py  test_error_snapshots.py  test_exit_code_matrix.py  test_groups_filter.py  test_help_snapshots.py  test_help_text_contract.py  test_home_flag_unwritable_journey.py  test_init_default_branch_prerequisite_journey.py  test_install_hermetic_journey.py  test_install_lifecycle.py  test_install_real_kanon.py  test_install_v3_lock_fail_fast_journey.py  test_kanon_home_store_journey.py  test_kanon_repo_cli.py  test_kanon_repo_e2e.py  test_kanon_repo_lifecycle_journey.py  test_lifecycle_journey.py  test_list.py  test_list_telemetry.py  test_make_operator_path_targets.py  test_marketplace_journey.py  test_matrix_traceability_complete.py  test_provider_agnostic.py  test_repo_abandon_errors.py  test_repo_abandon_flags.py  test_repo_abandon_happy.py  (+92 more)
tests/integration/: conftest.py  provider_allowlist.txt  test_add_core.py  test_add_dry_run.py  test_add_env_var_detection.py  test_add_marketplace_flag.py  test_add_zero_tags.py  test_auto_discovery.py  test_background_refresh.py  test_bootstrap.py  test_bootstrap_help.py  test_bootstrap_shim.py  test_bootstrap_shim_translation.py  test_cache_clock_skew.py  test_cache_layout.py  test_catalog_audit_entry_uniqueness.py  test_catalog_audit_framework.py  test_catalog_audit_legacy_dir.py  test_catalog_audit_metadata.py  test_catalog_audit_remote_url.py  test_catalog_audit_source_name.py  test_catalog_audit_strict.py  test_catalog_audit_tag_format.py  test_catalog_constraints.py  test_clean_env_override_cleanup.py  test_clean_lifecycle.py  test_clean_paths.py  test_cli_entry_points.py  test_complete_cached_catalogs.py  test_complete_catalog_entries.py  test_complete_catalog_versions.py  test_complete_lockfile_names.py  (+109 more)
tools/: test_tmp_monitor.py
(+673 files in other folders)
