[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kanon-cli"
version = "2.1.0"
description = "Kanon (Kanon Package Manager) CLI tool"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
license = {text = "Apache-2.0"}

authors = [
  { name = "Caylent", email = "solutions-owners@caylent.com" }
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14"
]

dependencies = [
    "defusedxml>=0.7.1",
    "packaging>=23.0",
    "pywin32>=312 ; sys_platform == 'win32'",
    "shtab>=1.7.0",
]

[project.scripts]
kanon = "kanon_cli.cli:main"

[project.urls]
Homepage = "https://github.com/caylent-solutions/kanon"
Issues = "https://github.com/caylent-solutions/kanon/issues"



[tool.hatch.build.targets.wheel]
packages = [
    "src/kanon_cli",
]
include = [
    "repo",
    "git_ssh",
    "hooks/*",
    "requirements.jsonc",
]

[tool.ruff]
target-version = "py311"
line-length = 120
extend-exclude = ["tests/fixtures", "tests/unit/repo/fixtures", ".devcontainer"]

[tool.ruff.lint]
select = ["F", "E"]
ignore = ["E731", "E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--ignore=tests/unit/repo/test_harness_smoke.py"
markers = [
    "unit: Unit tests -- fast, isolated, no external dependencies",
    "functional: Functional tests -- exercise CLI via subprocess",
    "integration: Integration tests -- verify modules load and run end-to-end",
    "scenario: End-to-end scenario tests mirroring docs/integration-testing.md",
    "linux_only: test only applicable on POSIX/Linux (skipped on Windows CI)",
    "windows_only: test only applicable on Windows (skipped on Linux CI)",
]

[tool.coverage.run]
source = ["src/kanon_cli"]
data_file = ".coverage-data/.coverage"

[tool.coverage.report]
show_missing = true

[tool.semantic_release]
version_variable = "src/kanon_cli/__init__.py:__version__"
version_toml = ["pyproject.toml:project.version"]
build_command = "python -m build"
tag_format = "{version}"
major_on_zero = true
branch = "main"
upload_to_pypi = false
upload_to_release = false
commit_version_number = true

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"
changelog_scope = false
exclude_commit_patterns = []

[tool.mypy]
exclude = ["src/kanon_cli/repo/"]

[tool.semantic_release.commit_parser_options]
allowed_tags = [
  "build",
  "chore",
  "ci",
  "docs",
  "feat",
  "fix",
  "perf",
  "refactor",
  "revert",
  "security",
  "style",
  "test"
]
minor_tags = ["feat"]
patch_tags = ["fix", "perf", "security", "revert"]



[dependency-groups]
dev = [
    "build>=1.4.3",
    "hatchling>=1.29.0",
    "mypy>=1.0.0",
    "pymarkdownlnt>=0.9.38",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "types-defusedxml>=0.7.0",
    "yamllint>=1.38.0",
]

# Markdown lint configuration consumed by `make lint-markdown` (pymarkdownlnt).
# Mirrors the committed .markdownlint.json posture so the two linters agree:
#   MD013 (line-length) is not enforced; MD024 (duplicate headings) is
#   restricted to sibling headings only. No other rule is disabled.
[tool.pymarkdown.plugins.md013]
enabled = false

[tool.pymarkdown.plugins.md024]
siblings_only = true
